force-app/main/default/objects/ContactDraft__c/ContactDraft__c.object-meta.xml
<CustomObject>
    <label>ContactDraft</label>
    <nameField>
        <label>ContactDraft Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContactDrafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>