force-app/main/default/objects/ContactDraft__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>