force-app/main/default/objects/ContactDraft__c/fields/OriginalLeadSource__c.field-meta.xml
<CustomField>
    <fullName>OriginalLeadSource__c</fullName>
    <label>OriginalLeadSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>