force-app/main/default/objects/ContactDraft__c/fields/UploadStatus__c.field-meta.xml
<CustomField>
    <fullName>UploadStatus__c</fullName>
    <label>UploadStatus</label>
    <type>TextArea</type>
</CustomField>